# rockyandfriends

./: .gitignore  .review-context.json  .task-context.json  13omigg4hottrloaocqb6dvclctkqamu.darc  AGENTS.md  ARCHITECTURE.md  CAPABILITIES.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DIRECTIVES.md  Dockerfile  GETTING_STARTED.md  HEARTBEAT.md  HEARTBEAT.md.tmpl  MEMORY.md  Makefile  README.md  SOUL.md  SPEC.md  TECH-DEBT-AUDIT-2026-04-06.md  TOOLS.md  USER.md  capabilities-manifest.json  chicken_throw.py  chicken_throw.usda  deck_review_natasha.md  docker-compose.yml  hatchery_scene.usda  j4mfq9ktuugavkdcv5baggf1bjqfcscq  manifest  natasha-gpu-health.json  ollama-watchdog.mjs  package-lock.json  package.json  render_hatchery.py  shanghai_render.py  shanghai_render_v3.py  squirrelchat.db
.beads/: config.yaml  issues.jsonl  metadata.json
.github/: PULL_REQUEST_TEMPLATE.md
.openclaw/: workspace-state.json
acc-cli/: Cargo.toml
acc-cli/src/: main.rs
acc-client/: Cargo.toml
acc-client/src/: agents.rs  auth.rs  bus.rs  chains.rs  error.rs  items.rs  lib.rs  memory.rs  queue.rs  tasks.rs
acc-client/tests/: queue_integration.rs  registry_integration.rs  tasks_integration.rs
acc-server/: Cargo.toml
acc-server/src/: dashboard.html  db.rs  dispatch.rs  lib.rs  main.rs  state.rs  supervisor.rs
acc-server/src/routes/: agents.rs  chains.rs  chat_sessions.rs  exec.rs  issues.rs  logs.rs  mod.rs  projects.rs  queue.rs  secrets.rs  soul.rs  supervisor.rs  tasks.rs  ui.rs  vault.rs  watchdog.rs
acc-server/tests/: agents_test.rs  auth_test.rs  bus_test.rs  chains_test.rs  chat_sessions_test.rs  exec_test.rs  health_test.rs  memory_client_test.rs  projects_test.rs  queue_test.rs  soul_test.rs  supervisor_test.rs  tasks_test.rs  ui_test.rs
acc-server/tests/helpers/: mod.rs
agent/acc-agent/: Cargo.toml
agent/acc-agent/src/: agent.rs  bus.rs  cli_tmux_adapter.rs  config.rs  exec_registry.rs  hermes.rs  hub_mock.rs  log_init.rs  main.rs  peers.rs  proxy.rs  queue.rs  sdk.rs  services.rs  session_discovery.rs  session_registry.rs  supervise.rs  tasks.rs  upgrade.rs  worker.rs
agent/acc-agent/src/hermes/: acc_tools.rs  agent.rs  conversation.rs  mod.rs  provider.rs  python_backend.rs  tool.rs
agent/acc-agent/src/hermes/gateway/: mod.rs  session.rs  slack.rs  telegram.rs
agentOS/: AGENTS.md  README.md
agentOS/sdk/rust/: Cargo.toml
agentOS/sdk/rust/src/: lib.rs
ccc/: AUDIT.md  CCC-AUDIT-FINAL-2026-04-04.md  ONBOARDING.md  PROJECTS_AS_FIRST_CLASS.md  REFACTOR_SCOPE.md  RUST_MIGRATION_SPEC.md  SHARED-INFRA-DESIGN-2026-04-02.md  SOA-AUDIT-2026-04-02.md
ccc-hub/: Caddyfile  README.md  docker-compose.yml  install-agent.sh  install-hub.sh  package.json  start.sh
ccc-server/: Cargo.toml
ccc/dashboard/dashboard-server/: Cargo.toml
ccc/dashboard/dashboard-server/src/: main.rs
ccc/dashboard/dashboard-server/src/static/: activity.html
ccc/dashboard/dashboard-server/tests/: proxy_tests.rs
clawbus/: SPEC.md  context-handoff.mjs  dead-letter.jsonl  receive-server.mjs
clawbus-plugin/: README.md  index.js  openclaw.plugin.json
clawchat/: API.md  package-lock.json  package.json  server.mjs
clawchat-mobile/: App.tsx  app.json
dashboard/: README.md  server.mjs
deploy/: .env.server.template  .env.template  README.md  acc-connectivity-check.sh  acc-repo-sync.service  acc-repo-sync.timer  agent-pull.sh  bootstrap.sh  bus-listener.sh  ccc-connectivity-check.sh  ccc-init.sh  ccc-repo-sync.service  claw-watchdog-compose.yml  claw-watchdog.Dockerfile  claw-watchdog.sh  commands.json  dangerous-command-guard.sh  fix-dns-boris.sh  fleet-sync.sh  heartbeat-local.service  hermes-driver.py  install-bus-listener.sh  install-queue-worker.sh  migrate.sh  nvidia-proxy.py  project-onboard.py  push-agentfs-sync.sh  queue-worker.py  rcc-connectivity-check.sh  rcc-init.sh  rebuild-changed.sh  register-agent.sh  restart-agent.sh  restart-fleet.sh  restart-hub.sh  (+10 more)
rcc/agentfs-sync/: Cargo.toml
rcc/agentfs-sync/src/: main.rs
rcc/dashboard/dashboard-ui/: Cargo.toml  Trunk.toml  index.html
rcc/dashboard/dashboard-ui/dashboard-ui/: Cargo.toml  index.html  manifest.json
rcc/dashboard/dashboard-ui/dashboard-ui/public/: manifest.json
rcc/dashboard/dashboard-ui/dashboard-ui/src/: app.rs  main.rs  types.rs
rcc/dashboard/dashboard-ui/dashboard-ui/src/components/: activity_feed.rs  agent_cards.rs  bus_send.rs  changelog.rs  clawchat.rs  coding_agent.rs  geek_view.rs  idea_incubator.rs  kanban.rs  metrics.rs  mod.rs  providers.rs  sc_channel_modal.rs  sc_reactions.rs  sc_thread.rs  sc_types.rs  services.rs  squirrelbus.rs  squirrelchat.rs  timeline.rs
rcc/dashboard/dashboard-ui/dashboard-ui/style/: main.css  squirrelchat.css
rcc/dashboard/dashboard-ui/public/: manifest.json
rcc/dashboard/dashboard-ui/src/: app.rs  context.rs  main.rs  types.rs
rcc/dashboard/dashboard-ui/src/components/: agent_cards.rs  agent_detail.rs  auth_gate.rs  bus_send.rs  clawchat.rs  clawfs.rs  coding_agent.rs  geek_view.rs  idea_incubator.rs  issues.rs  metrics.rs  mod.rs  providers.rs  sc_types.rs  sc_voice.rs  services.rs  settings.rs  squirrelchat.rs  timeline.rs  work_queue.rs
rcc/dashboard/dashboard-ui/style/: clawchat.css  main.css  squirrelchat.css
rcc/dashboard/rcc-server/: Cargo.toml
rcc/dashboard/rcc-server/src/: brain.rs  main.rs  state.rs
rcc/dashboard/rcc-server/src/routes/: agentos.rs  agents.rs  brain.rs  exec.rs  fs.rs  geek.rs  issues.rs  lessons.rs  memory.rs  metrics.rs  mod.rs  models.rs  projects.rs  providers.rs  services.rs  ui.rs
rcc/dashboard/squirrelchat-server/: Cargo.toml
rcc/dashboard/squirrelchat-server/squirrelchat-server/: squirrelchat-server.service
rcc/dashboard/squirrelchat-server/squirrelchat-server/src/: main.rs  ws.rs
rcc/dashboard/squirrelchat-server/src/: db.rs  main.rs  models.rs  routes.rs
rcc/wasm-dashboard/: Cargo.toml  Trunk.toml  index.html  styles.css
rcc/wasm-dashboard/src/: api.rs  main.rs  types.rs
rcc/wasm-dashboard/src/components/: agent_cards.rs  appeal_queue.rs  bus.rs  geek_view.rs  kanban.rs  metrics.rs  mod.rs  nav.rs  providers.rs
(+696 files in other folders)
