[package]
name = "acc-client"
version = "0.1.0"
edition = "2021"
description = "HTTP client library for the ACC fleet API"

[lib]
name = "acc_client"
path = "src/lib.rs"

[dependencies]
acc-model = { path = "../acc-model" }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror = "1"
async-stream = "0.3"
bytes.workspace = true

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["macros", "rt"] }
