[package]
name = "acc-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "acc-server"
path = "src/main.rs"

[lib]
name = "acc_server"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
rand = "0.8"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
axum = { version = "0.7", features = ["macros"] }
bytes = "1"
