[package]
name = "acc-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "acc-server"
path = "src/main.rs"

[lib]
name = "acc_server"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true, features = ["macros"] }
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", features = ["json", "stream"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-journald.workspace = true
async-stream = "0.3"
uuid = { version = "1", features = ["v4"] }
hmac.workspace = true
sha2.workspace = true
subtle.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
chrono.workspace = true
hex.workspace = true
base64.workspace = true
rusqlite = { version = "0.31", features = ["bundled"] }
rand = "0.8"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
http-body-util.workspace = true
axum = { workspace = true, features = ["macros"] }
bytes.workspace = true
