[package]
name = "acc-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "acc-agent"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
axum = "0.7"
http = "1"
http-body-util = "0.1"
bytes = "1"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
