[package]
name = "acc-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "acc-agent"
path = "src/main.rs"

[dependencies]
acc-client = { path = "../../acc-client" }
acc-model  = { path = "../../acc-model" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-journald.workspace = true
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures-util.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
subtle.workspace = true
base64.workspace = true
axum.workspace = true
http = "1"
http-body-util.workspace = true
bytes.workspace = true

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
