[package]
name = "agentfs-sync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agentfs-sync"
path = "src/main.rs"

[dependencies]
notify = "6"
aws-sdk-s3 = "1"
aws-config = "1"
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
