[package]
name = "wasm-dashboard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wasm-dashboard"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "EventSource",
    "MessageEvent",
    "EventTarget",
    "Window",
    "Navigator",
    "Notification",
    "NotificationPermission",
] }
js-sys = "0.3"
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
log = "0.4"
console_log = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
