[package]
name = "dashboard-ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dashboard-ui"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
gloo-net = { version = "0.5", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "EventSource",
    "MessageEvent",
    "ErrorEvent",
    "console",
    "DragEvent",
    "DataTransfer",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
